--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -11,6 +11,17 @@ body
     color: #ffffff 
     background-repeat: no-repeat
 
+.closed
+  display: none
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active
+    -webkit-box-shadow: 0 0 0 30px #242424 inset !important
+    -webkit-text-fill-color: #ffffff !important
+    border-left: none
+    border-right: none
 
 .menu-close
     position: absolute
@@ -18,7 +29,10 @@ body
     width: 30px
     height: 30px
     background-color: #111111
+    text-align: center
     img
+        width: 18px
+        height: 18px
         filter: invert(1)
 
 .horizont-line
@@ -36,7 +50,7 @@ body
     padding: 0
     list-style-type: none
     position: fixed
-    z-index: 999999
+    z-index: 9
     right: 0
     top: 25%
 
@@ -286,7 +300,7 @@ body
                     position: relative
                     .belogin
                         @include font-jost
-
+                        cursor: pointer
                         color: #ffffff
                         font-size: 16px
                         font-style: normal
@@ -688,7 +702,8 @@ body
 @import "incollection"
 @import "projects"
 @import "profile"
-@import "product"   
+@import "product"
+@import "registration"
 
 // === footer end ===  
     
