--- a/app/sass/_product.sass
+++ b/app/sass/_product.sass
@@ -30,7 +30,6 @@
             margin-bottom: 35px    
         &-description
             display: flex
-            gap: 66px
             &_wrapper
                 flex-basis: 432px
             &_list
@@ -71,6 +70,9 @@
                 line-height: 23px
                 letter-spacing: 0em
                 text-align: left
+
+.product-content__details-description > * + *
+    margin: 0 0 0 66px
 
 .product-mobile__description
     display: none
