--- a/app/sass/_collection.sass
+++ b/app/sass/_collection.sass
@@ -35,6 +35,13 @@
       background-size: cover
       height: 100%
       width: 100%
+      .item-conten-background
+        background-repeat: no-repeat
+        background-size: cover
+        width: 100%
+        height: 100%
+        transform: scale(1.2)
+        transition: transform .8s ease
       &__title
         position: absolute
         left: 0
@@ -54,13 +61,11 @@
             letter-spacing: 0em
 
       .look-collection
-        @include font-jost
-        font-size: 16px
-        font-style: normal
-        font-weight: 400
-        line-height: 23px
-        letter-spacing: 0em
-        color: #ffffff  
+        position: absolute
+        top: 0
+        bottom: 0
+        left: 0
+        right: 0
         opacity: 0
         display: block
         height: 100%
@@ -71,9 +76,17 @@
             bottom: 66px
             left: 25%
         &__text
+          @include font-jost
+          font-size: 16px
+          font-style: normal
+          font-weight: 400
+          line-height: 23px
+          letter-spacing: 0em
+          color: #ffffff  
           position: absolute
           bottom: 60px
-          left: 32px
+          left: -250px
+          transition: left .8s ease
           &::before
            position: absolute
            content: ""
@@ -84,15 +97,12 @@
            bottom: 4px
            right: -60px 
     &:hover
+      .item-conten-background
+        transform: scale(1)
       .look-collection
         opacity: 1
         .look-collection__text
-          animation: .3s linear pulse
-          @keyframes pulse
-            0%
-              left: -250px 
-            50%
-              left:  32px
+          left: 32px
 .sidebar
   grid-area: sidebar
   
@@ -104,5 +114,5 @@
   
 .content-three
   grid-area: content-three 
-
+    
 // === ceramist END ===  
