--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -709,6 +709,7 @@ input:-webkit-autofill:active
 @import "product"
 @import "registration"
 @import "about"
+@import "filter"
 
 // === footer end ===  
     
