--- a/app/sass/_product.sass
+++ b/app/sass/_product.sass
@@ -1,10 +1,13 @@
 .product-content
-    display: flex
+    display: grid
+    grid-template-rows: auto 1fr auto
+    grid-template-columns: 1fr 2fr
+    grid-gap: 39px
     margin-top: 44px
     &__slider
-        flex-basis: 38%
+        flex-basis: 34%
     &__details
-        flex-basis: 65%
+        flex-basis: 66%
         border: 1px solid #454545
         padding: 53px
         &-articul
@@ -108,25 +111,6 @@
         grid-gap: 20px
         &-wrapper
             position: relative
-            .add-to-favorite
-                position: absolute
-                z-index: 99
-                width: 34px
-                height: 34px
-                background-color: #1C1C1C
-                line-height: 34px
-                text-align: center
-                border-radius: 50%
-                cursor: pointer
-                right: 18px
-                top: 18px
-                &:hover
-                   .fa-heart
-                       font-weight: bold
-                &.active
-                    .fa-heart
-                       font-weight: bold
-
             &_item
                 &-img
                     overflow: hidden
@@ -149,69 +133,143 @@
                     font-weight: 400
                     line-height: 22px
                     letter-spacing: 0em
-                    text-align: left               
+                    text-align: left      
+.add-to-favorite
+    position: absolute
+    z-index: 99
+    width: 34px
+    height: 34px
+    background-color: #1C1C1C
+    line-height: 34px
+    text-align: center
+    border-radius: 50%
+    cursor: pointer
+    right: 18px
+    top: 18px
+    &:hover
+        .fa-heart
+            font-weight: bold
+    &.active
+        .fa-heart
+            font-weight: bold
+
 .check-all__models
     text-align: center
     margin-top: 46px
 
-.product-image-carousels
-    display: flex
-    justify-content: center
+.slider-flex-container
+    display: -webkit-box!important
 
-.thumbnails-slider
-    width: 105px
-    height: 158px
-    padding: 0
-    margin-right: 15px
-    .thumbnail-button
-        display: block 
-        background: transparent
-        border: none
-        height: 188px!important
-        img
-            width: 105px
-            height: 100%
-.main-image-slider
-    position: relative
+.slider-flex-container-children-one
     width: 401px
-    height: 100%
-    .slick-slide img
-        width: 100%
-    .slick-prev,
+    order: 0
+    flex: 0 1 auto
+    align-self: center
+    margin-left: 8px
+.slider-flex-container-children-two
+    width: 105px
+    height: 188px
+    order: 0
+    flex: 0 1 auto
+    align-self: center
+
+.slider-single
+    .slick-prev
+        font-size: 0
+        width: 28px
+        height: 28px
+        border: none
+        border-radius: 50%
+        background-color: rgba(0,0,0, .6)
+        position: absolute
+        z-index: 9
+        left: 27px
+        top: 50%
+        transform: translate(0, -50%)
+        &::before
+            content: "\f053"
+            font-family: "Font Awesome 5 Free"
+            font-weight: 600
+            font-size: 10px
+            line-height: 1
+            color: #ffffff
+            top: 34%
+            left: 34%
     .slick-next
         font-size: 0
-        position: absolute
-        border: 0
-        background: none
-        z-index: 1
-        background-color: rgba(0,0,0, .6)
+        width: 28px
+        height: 28px
+        border: none
         border-radius: 50%
-        width: 28px
-        height: 28px
+        background-color: rgba(0,0,0, .6)
+        position: absolute
+        right: 27px
+        top: 50%
+        transform: translate(0, -50%)
+        z-index: 9
+        &::before
+            content: "\f054"
+            font-family: "Font Awesome 5 Free"
+            font-weight: 600
+            font-size: 10px
+            line-height: 1
+            color: #ffffff
+            top: 34%
+            left: 34%
+    
+.slider-nav
+    span
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+    .slick-slide
+        cursor: pointer
+    .slick-slide img
+        width: 100%
+        height: 193px
+        object-fit: cover
     .slick-prev
-        top: 50%
-        left: 15px
-        transform: translate(0, -50%)
-    .slick-prev:after
-        content: ""
-        position: absolute
-        background-image: url(../images/left.svg)
-        background-repeat: no-repeat
+        font-size: 0
         width: 28px
         height: 28px
-        top: 9px
-        right: -11px
+        border: none
+        background-color: rgba(0,0,0, .6)
+        position: absolute
+        border-radius: 50%
+        z-index: 9
+        top: 22px
+        left: 50%
+        transform: translate(-50%,0)
+        &::before
+            content: "\f077"
+            font-family: "Font Awesome 5 Free"
+            font-weight: 600
+            font-size: 10px
+            line-height: 1
+            color: #ffffff
+            top: 34%
+            left: 34%
     .slick-next
-        top: 50%
-        right: 15px
-        transform: translate(0, -50%)
-    .slick-next:after
-        content: ""
-        position: absolute
-        background-image: url(../images/right.svg)
-        background-repeat: no-repeat
+        font-size: 0
         width: 28px
         height: 28px
-        top: 9px
-        right: -11px
+        border: none
+        background-color: rgba(0,0,0, .6)
+        position: absolute
+        border-radius: 50%
+        z-index: 9
+        bottom: 22px
+        left: 50%
+        transform: translate(-50%,0)
+        &::before
+            content: "\f078"
+            font-family: "Font Awesome 5 Free"
+            font-weight: 600
+            font-size: 10px
+            line-height: 1
+            color: #ffffff
+            top: 34%
+            left: 34%
+
    
