--- a/app/sass/_filter.sass
+++ b/app/sass/_filter.sass
@@ -8,7 +8,7 @@
     display: grid
     padding-right: 15px
     padding-left: 40px
-    grid-template-columns: 283px 487px 299px 1fr
+    grid-template-columns: 270px 287px 195px 1fr
 .filter
     width: 100%
     label
@@ -93,22 +93,24 @@
         &::before
             transform: scaleX(1)
 
+.filter-guts-type
+    display: flex
+    align-items: center
+    position: relative
 
 .filter-guts-sizes
     display: flex
     align-items: center
     position: relative
     padding-top: 8px
-.filter-guts-type
-    display: flex
-    align-items: center
-    position: relative
-    padding-top: 8px
+    padding-left: 29px
+
 .color-filter
     display: flex
     align-items: center
     position: relative
     padding-top: 8px
+    padding-left: 29px
 .filter-guts-buttons
     display: flex
     align-items: center
@@ -126,4 +128,4 @@
     letter-spacing: 0em
     margin: 0
     top: -9px
-    left: -27px
+    left: 2px
