--- a/app/sass/_filter.sass
+++ b/app/sass/_filter.sass
@@ -1,3 +1,51 @@
+.collection-mobile-filter
+    position: relative
+    display: none
+    margin-bottom: 15px
+    &__header
+        background: #1C1C1C
+        height: 40px
+        line-height: 40px
+        &-title
+            position: relative
+            text-transform: uppercase
+            @include font-jost
+            font-size: 12px
+            font-style: normal
+            font-weight: 400
+            letter-spacing: 0em 
+            padding-left: 45px
+            &::before
+                content: ""
+                position: absolute
+                width: 20px
+                height: 20px
+                background-image: url(../images/filter.svg)
+                background-repeat: no-repeat
+                background-position: 0 0
+                background-size: contain
+                left: 12px
+                top: 9px
+        &-chevron
+            position: absolute
+            top: -2px
+            right: 17px
+            &::before
+                content: "\f078"
+                font-family: "Font Awesome 5 Free"
+                font-size: 10px
+                font-weight: 600
+            &.open
+                &::before
+                    content: "\f077"
+
+
+
+        
+
+    
+    
+    
 .collection-inner__filter
     background-color: #1C1C1C
     height: 65px
@@ -40,9 +88,12 @@
             cursor: pointer
             height: 0
             width: 0
+            &:checked
+                label
+                    color: #BE5B00
+
     label input:checked ~ .checkmark
-        border: 5px solid #DC7D26
-                
+        border: 5px solid #DC7D26                
 .apply-filter
     padding: 0
     border: none
@@ -86,12 +137,8 @@
         bottom: 0
         z-index: -1
     &:hover
-        color: #111111
+        color: #ffffff
         text-decoration: none
-        img
-            filter: invert(1)
-        &::before
-            transform: scaleX(1)
 
 .filter-guts-type
     display: flex
